Fix scrollbar height in style.css

--- a/src/uix/static/style.css
+++ b/src/uix/static/style.css
@@ -98,6 +98,7 @@ a:hover {
 /* Scroll Bar */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
